@@ -12,6 +12,11 @@ ECL 0.9k:
 
  - Improved hashing on 64-bit machines.
 
+* CLOS:
+
+ - When caching generic function calls, ECL now uses a thread-local hash table
+   instead of one hash table per generic function.
+
 ;;; Local Variables: ***
 ;;; mode:text ***
 ;;; fill-column:79 ***
